spike templating recipe card on home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -42,25 +42,9 @@
                         </div>
                     </div>
                     <a class="btn-floating red" id="show-recipe-card"><i class="material-icons">add</i></a>
-                    <span class="lime-text text-lighten-5" style="line-height: 2.5;" id="sample-tag">View a sample recipe
-                        card</span>
+                    <span class="lime-text text-lighten-5" style="line-height: 2.5;" id="sample-tag">View a sample recipe card</span>
                     <div class="card" id="recipe-content">
-                        <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am
-                                convenient because I require little markup to use effectively.</p>
-                        </div>
-                        <div class="card-tabs">
-                            <ul class="tabs tabs-fixed-width">
-                                <li class="tab"><a href="#test4">Test 1</a></li>
-                                <li class="tab"><a class="active" href="#test5">Test 2</a></li>
-                                <li class="tab"><a href="#test6">Test 3</a></li>
-                            </ul>
-                        </div>
-                        <div class="card-content grey lighten-4">
-                            <div id="test4">Test 1</div>
-                            <div id="test5">Test 2</div>
-                            <div id="test6">Test 3</div>
-                        </div>
+                        {% include "recipecard.html" %}
                     </div>
                 </div>
                 <div class="col s12 m4 push-m1 l3 push-l2" id="home-info-col">
