--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
                 <ul class="right hide-on-med-and-down">
                     {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user'])}}">My Profile</a></li>
-                        <li><a href="{{ url_for('get_recipes')}}">Recipes</a></li>
+                        <li><a href="{{ url_for('get_recipes', id='0')}}">Recipes</a></li>
                         <li><a href="{{ url_for('logout')}}">Log Out</a></li>
                     {% else %}
                         <li><a href="{{ url_for('home')}}">Home</a></li>
@@ -33,7 +33,7 @@
         <ul class="sidenav" id="mobile-demo">
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user'])}}">My Profile</a></li>
-                <li><a href="{{ url_for('get_recipes')}}">Recipes</a></li>
+                <li><a href="{{ url_for('get_recipes', id='0')}}">Recipes</a></li>
                 <li><a href="{{ url_for('logout')}}">Log Out</a></li>
             {% else %}
                 <li><a href="{{ url_for('home')}}">Home</a></li>
@@ -52,7 +52,7 @@
                         <div class="col s12 m8 offset-m2 flashes">
                             <h5 class="teal darken-3 lime-text text-accent-3 center-align">{{ message }}</h5>
                         </div>
-                </div>
+                    </div>
                 {% endfor %}
             {% endif %}
         {% endwith %}
