tab functionality within recipe card added

--- a/templates/home.html
+++ b/templates/home.html
@@ -41,9 +41,10 @@
                             </div>
                         </div>
                     </div>
+                    <!-- SAMPLE RECIPE CARD -->
                     <a class="btn-floating red" id="show-recipe-card"><i class="material-icons">add</i></a>
                     <span class="lime-text text-lighten-5" style="line-height: 2.5;" id="sample-tag">View a sample recipe card</span>
-                    <div class="card" id="recipe-content">
+                    <div id="sample-recipe-content">
                         {% include "recipecard.html" %}
                     </div>
                 </div>
