--- a/templates/recipecard.html
+++ b/templates/recipecard.html
@@ -1,17 +1,24 @@
 {% block recipecard %}   
-        <div class="card-content">
-            <p>{{ recipecard.title }}</p>
-        </div>
-        <div class="card-tabs">
-            <ul class="tabs tabs-fixed-width">
-                <li class="tab"><a href="#test4">Test 1</a></li>
-                <li class="tab"><a class="active" href="#test5">Test 2</a></li>
-                <li class="tab"><a href="#test6">Test 3</a></li>
-            </ul>
-        </div>
-        <div class="card-content grey lighten-4">
-            <div id="test4">Test 1</div>
-            <div id="test5">Test 2</div>
-            <div id="test6">Test 3</div>
-        </div>
+<div class="card" id="recipe-card">
+    <div class="card-content">
+        <h6>{{ recipecard.title|title}}</h6>
+    </div>
+    <div class="card-tabs">
+        <ul class="tabs tabs-fixed-width" >
+            <li class="tab"><a class="tab-link active" id="desc-tab">Description</a></li>
+            <li class="tab"><a class="tab-link" id="ingredients-tab">Ingredients</a></li>
+            <li class="tab"><a class="tab-link" id="method-tab">Method</a></li>
+        </ul>
+    </div>
+    <div class="card-content grey lighten-4">
+      <div id="desc">
+            <p>{{ recipecard.desc|capitalize }}</p>
+            <br>
+            <p>Portions: {{ recipecard.portions }}</p>
+            <p>Suitable for: {{ recipecard.suitableForMinMnths }} - {{ recipecard.suitableForMaxMnths }} months</p>       
+      </div>
+      <div id="ingredients">{{ recipecard.ingredients|capitalize }}</div>
+      <div id="method">{{ recipecard.steps|capitalize}}</div>
+    </div>
+</div>
 {% endblock %}
