--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,8 @@
                     </div>
                     <!-- SAMPLE RECIPE CARD -->
                     <a class="btn-floating red" id="show-recipe-card"><i class="material-icons">add</i></a>
-                    <span class="lime-text text-lighten-5" style="line-height: 2.5;" id="sample-tag">View a sample recipe card</span>
+                    <span class="lime-text text-lighten-5" style="line-height: 2.5;" id="sample-tag">View a sample
+                        recipe card</span>
                     <div id="sample-recipe-content">
                         {% include "recipecard.html" %}
                     </div>
@@ -51,13 +52,16 @@
                 <div class="col s12 m4 push-m1 l3 push-l2" id="home-info-col">
                     <div class="row">
                         <div class="col s12 home-info-text-col teal-text text-lighten-5">
-                            <p class="home-info-text" id="home-info-text-1">Great recipe ideas for weaning your little munchkins!</p>
+                            <p class="home-info-text" id="home-info-text-1">Great recipe ideas for weaning your little
+                                munchkins!</p>
                         </div>
                         <div class="col s12 home-info-text-col purple-text text-lighten-5">
-                            <p class="home-info-text" id="home-info-text-2">Save your favourite recipes to your profile!</p>
+                            <p class="home-info-text" id="home-info-text-2">Save your favourite recipes to your profile!
+                            </p>
                         </div>
                         <div class="col s12 home-info-text-col blue-text text-lighten-4">
-                            <p class="home-info-text" id="home-info-text-3">Add your own best recipes with our easy to use recipe builder!</p>
+                            <p class="home-info-text" id="home-info-text-3">Add your own best recipes with our easy to
+                                use recipe builder!</p>
                         </div>
                     </div>
                 </div>
