--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,8 +35,7 @@ main {
 
 #home-bg-lowres {
   background-image: url(../images/home.jpg);
-  height: 100vh;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
 }
 
@@ -46,7 +45,7 @@ main {
 
 .opacity-layer {
     background-color: rgba(3, 0, 0, 0.6);
-    height: 100vh;
+    height: 150vh;
     padding-top: 100px;
 }
 
@@ -91,7 +90,8 @@ main {
 }
 
 #recipe-card{
-    max-height: 30vh;
+    min-height: 40vh;
+    max-height: 40vh;
     overflow-y: scroll;
 }
 
@@ -129,18 +129,36 @@ main {
 }
 
 /* MEDIA QUERIES */
+@media only screen and (max-height: 500px) {
+    .opacity-layer {
+        height: auto;
+    }
+}
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 993px) {
+    #recipe-card{
+        min-height: 40vh;
+        max-height: 60vh;
+    }
+}
+
 @media only screen and (max-width: 601px) {
     #home-bg-lowres {
         height: auto;
     }
+
     .opacity-layer {
         padding-top: 0px;
         height: auto;
     }
+
     #home-info-col {
         text-align: left;
     }
-    #home-bg-lowres {
-        background-repeat: repeat;
-    }
+
+    #recipe-card{
+        min-height: 50vh;
+        max-height: 70vh;
+    }       
 }
