--- a/templates/recipecard.html
+++ b/templates/recipecard.html
@@ -1,32 +1,33 @@
 {% block recipecard %}
-<div class="card" id="recipe-card">
-    <div class="card-content grey lighten-2">
+<div class="card card-pattern" id="recipe-card">
+    <div class="card-content lime lighten-5">
         <h5>{{ recipecard.title|title }}</h5>
+        <p class="recipe-created-by"><i>from {{ recipecard.created_by }}</i></p>
+    </div>
+    <div class="recipe-img-wrapper">
+        <img class="recipe-img" src="/file/{{recipecard.recipe_img}}" alt="{{recipecard.recipe_img}}">
     </div>
     <div class="card-tabs">
         <ul class="tabs tabs-fixed-width">
-            <li class="tab"><a class="tab-link active" id="desc-tab">Description</a></li>
-            <li class="tab"><a class="tab-link" id="ingredients-tab">Ingredients</a></li>
-            <li class="tab"><a class="tab-link" id="method-tab">Method</a></li>
+            <li class="tab"><a class="tab-link grey darken-3 light-green-text active" id="desc-tab">Description</a></li>
+            <li class="tab"><a class="tab-link light-green-text text-lighten-1" id="ingredients-tab">Ingredients</a></li>
+            <li class="tab"><a class="tab-link light-green-text text-lighten-2" id="method-tab">Method</a></li>
         </ul>
     </div>
-    <div class="card-content grey lighten-4">
+    <div class="card-tab-content lime lighten-5">
         <div id="desc">
-            <h6>{{ recipecard.desc|title }}</h6>
-            <br>
-            <p>Portions: {{ recipecard.portions }}</p>
-            <p>Suitable for: {{ recipecard.suitableForMinMnths }} - {{ recipecard.suitableForMaxMnths }} months</p>
+            <h6>{{ recipecard.desc[0]|upper}}{{recipecard.desc[1:] }}</h6>
+            <p><i>Portions: {{ recipecard.portions }}</i></p>
+            <p><i>Suitable for: {{ recipecard.suitableForMinMnths }} - {{ recipecard.suitableForMaxMnths }} months</i></p>
         </div>
         <div id="ingredients">
             {% for k, ingredient in recipecard.ingredients.items() %}
                 <p>- {{ ingredient.name|capitalize }} - {{ ingredient.qty.measure }}{{ ingredient.qty.unit }}</p>
-                <br>
             {% endfor %}
         </div>
         <div id="method">
             {% for k, step in recipecard.steps.items() %}
-                <p>- {{ step.action|capitalize }} <i>({{ step.time }} mins)</i></p>
-                <br>
+                <p>{{loop.index}}. {{ step.action|capitalize }} <i>({{ step.time|int }} mins)</i></p>
             {% endfor %}
         </div>
     </div>
