add route and template for builder

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,8 @@
                 <ul class="right hide-on-med-and-down">
                     {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user'])}}">My Profile</a></li>
-                        <li><a href="{{ url_for('get_recipes', id='0')}}">Recipes</a></li>
+                        <li><a href="{{ url_for('get_recipes', id='0')}}">Search</a></li>
+                        <li><a href="{{ url_for('get_recipes', id='0')}}">Builder</a></li>
                         <li><a href="{{ url_for('logout')}}">Log Out</a></li>
                     {% else %}
                         <li><a href="{{ url_for('home')}}">Home</a></li>
@@ -34,7 +35,8 @@
         <ul class="sidenav" id="mobile-demo">
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user'])}}">My Profile</a></li>
-                <li><a href="{{ url_for('get_recipes', id='0')}}">Recipes</a></li>
+                <li><a href="{{ url_for('get_recipes', id='0')}}">Search</a></li>
+                <li><a href="{{ url_for('get_recipes', id='0')}}">Builder</a></li>
                 <li><a href="{{ url_for('logout')}}">Log Out</a></li>
             {% else %}
                 <li><a href="{{ url_for('home')}}">Home</a></li>
