--- a/templates/recipecard.html
+++ b/templates/recipecard.html
@@ -1,5 +1,5 @@
 {% block recipecard %}
-<div class="card card-pattern" id="recipe-card">
+<div class="card food-bg" id="recipe-card">
     <div class="card-content lime lighten-5">
         <h5>{{ recipecard.title|title }}</h5>
         <p class="recipe-created-by"><i>from {{ recipecard.created_by }}</i></p>
