--- a/templates/builder.html
+++ b/templates/builder.html
@@ -61,13 +61,33 @@
                     </p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col s12">
+                    <label>Method</label>
+                    <br>
+                    <button class="btn waves-effect waves-light" id="builder-add-step">Add Step</button>
+                    <br>
+                    <div class="row steps" id="step-1">
+                        <div class="input-field col m8">
+                            <input id="step-1-desc" name="step-1-desc" type="text" minlength="1" maxlength="100" required>
+                            <label for="step-1-desc">Describe Step 1</label>
+                        </div>
+                        <div class="col m4">
+                            <label for="step-1-time">Time to complete step (mins)</label>
+                            <p class="range-field">
+                                <input type="range" name="step-1-time" id="step-1-time" min="1" max="360" value="1"/>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-------submit------->
             <div class="row">
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light" type="submit" id="submit-builder">Submit</button>
                 </div>
             </div>
-            
+
         </div>
     </form>
 </div>
