ingredients and method builder added. recipe card preview completed

--- a/templates/home.html
+++ b/templates/home.html
@@ -51,16 +51,20 @@
                     </div>
                     
                 </div>
+                <!-- SITE EXPLAINER TAGS -->
                 <div class="col s12 m4 push-m1 l3 push-l2" id="home-info-col">
                     <div class="row">
+                        <!-- TAG ONE -->
                         <div class="col s12 home-info-text-col teal-text text-lighten-5">
                             <p class="home-info-text" id="home-info-text-1">Great recipe ideas for weaning your little
                                 munchkins!</p>
                         </div>
+                        <!-- TAG TWO -->
                         <div class="col s12 home-info-text-col purple-text text-lighten-5">
                             <p class="home-info-text" id="home-info-text-2">Save your favourite recipes to your profile!
                             </p>
                         </div>
+                        <!-- TAG THREE -->
                         <div class="col s12 home-info-text-col blue-text text-lighten-4">
                             <p class="home-info-text" id="home-info-text-3">Add your own best recipes with our easy to
                                 use recipe builder!</p>
