--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,6 +109,11 @@ main {
     padding: 5px;
 }
 
+.file-field .file-path-wrapper {
+    font-size: 8px;
+    padding-left: 0;
+}
+
 .recipe-img {
     max-width: 100%;
     display: block;
@@ -119,20 +124,16 @@ main {
     font-size: 12px;
 }
 
-.steps {
+.steps, .ingredients {
     width: 90%;
 }
 
-.range {
-    width: 75%;
+#submit-builder {
+    margin-top: 30px;
 }
 
-.range-value-col {
-    margin-top:25px;
-}
-
-.range-value {
-    float: right;
+#preview-back {
+    margin: 10px;
 }
 
 @keyframes fadeIn {
