--- a/templates/builder.html
+++ b/templates/builder.html
@@ -4,8 +4,15 @@
     <div class="row">
         <h5>Recipe Builder</h5>
     </div>
-    <form method="POST" action="/addrecipe" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data">
         <div class="card-panel">
+            <!-- preview -->
+            <div class="row">
+                <div class="input-field col s12 center">
+                    <button class="btn waves-effect waves-light cyan" type="submit" id="preview-builder" name="preview"
+                        formaction="/preview" target="_blank">Preview Card</button>
+                </div>
+            </div>
             <!-------title------->
             <div class="row">
                 <div class="input-field col s12">
@@ -25,62 +32,81 @@
             <!-------image------->
             <div class="row">
                 <div class="file-field input-field">
-                    <div class="btn">
-                        <span>Select Image</span>
-                        <input type="file">
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="btn">
+                                <span>Select Image</span>
+                                <input type="file">
+                            </div>
+                        </div>
+                        <div class="col s12">
+                            <div class="file-path-wrapper">
+                                <input class="file-path validate" type="text" name="recipe_img">
+                            </div>
+                        </div>
                     </div>
-                    <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text">
-                    </div>
                 </div>
             </div>
-            <!-------portions------->
-            <div class="row">
-                <div class="col s12">
-                    <label for="portions">Portions</label>
-                    <p class="range-field">
-                        <input type="range" name="portions" id="portions" min="1" max="24" value="1" />
-                    </p>
-                </div>
+        <!-------portions------->
+        <div class="row">
+            <div class="col s12">
+                <label for="portions">Portions</label>
+                <p class="range-field">
+                    <input type="range" name="portions" id="portions" min="1" max="24" value="1" />
+                </p>
             </div>
-            <!-------suitable for months min------->
-            <div class="row">
-                <div class="col s12">
-                    <label for="portions">Suitable for months (min)</label>
-                    <p class="range-field">
-                        <input type="range" name="min" id="min" min="1" max="72" value="1" />
-                    </p>
-                </div>
-            </div>
-            <!-------suitable for months max------->
-            <div class="row">
-                <div class="col s12">
-                    <label for="portions">Suitable for months (max)</label>
-                    <p class="range-field">
-                        <input type="range" name="max" id="max" min="1" max="72" value="72" />
-                    </p>
-                </div>
-            </div>
-             <!-------method------->
-            <div class="row">
-                <div class="col s12">
-                    <label>Method</label>
-                    <br>
-                    <div class="container steps">
-                    </div>
-                    <br>
-                    <a class="btn waves-effect waves-light" id="builder-add-step">Add Step</a>
-                </div>
-            </div>
-            <!-------submit------->
-            <div class="row">
-                <div class="input-field col s12 center">
-                    <button class="btn waves-effect waves-light" type="submit" id="submit-builder">Submit</button>
-                </div>
-            </div>
-
         </div>
-    </form>
+        <!-------suitable for months min------->
+        <div class="row">
+            <div class="col s12">
+                <label for="portions">Suitable for months (min)</label>
+                <p class="range-field">
+                    <input type="range" name="min" id="min" min="1" max="72" value="1" />
+                </p>
+            </div>
+        </div>
+        <!-------suitable for months max------->
+        <div class="row">
+            <div class="col s12">
+                <label for="portions">Suitable for months (max)</label>
+                <p class="range-field">
+                    <input type="range" name="max" id="max" min="1" max="72" value="72" />
+                </p>
+            </div>
+        </div>
+        <!-------ingredients------->
+        <div class="row">
+            <div class="col s12">
+                <label>Ingredients</label>
+                <br>
+                <div class="container ingredients">
+                </div>
+                <br>
+                <a class="btn waves-effect waves-light" id="builder-add-ingredient">Add Ingredient</a>
+            </div>
+        </div>
+        <br>
+        <!-------method------->
+        <div class="row">
+            <div class="col s12">
+                <label>Method</label>
+                <br>
+                <div class="container steps">
+                </div>
+                <br>
+                <a class="btn waves-effect waves-light" id="builder-add-step">Add Step</a>
+            </div>
+        </div>
+        <!-------submit------->
+        <div class="row">
+            <div class="input-field col s12 center">
+                <button class="btn waves-effect waves-light orange" type="submit" id="submit-builder" name="submit"
+                    formaction="/addrecipe">Submit</button>
+            </div>
+        </div>
+        <br>
+    </div>
+</form>
 </div>
 
 {% endblock %}
