--- a/templates/preview.html
+++ b/templates/preview.html
@@ -4,9 +4,9 @@
 <div class="row" id="recipe-preview">
     <div class="col s12 m7 l5">
         {% include "recipecard.html" %}      
-        <div class="col s12 m7 l5">
-            <a href="#" onclick="history.go(-1)" class="btn waves-effect waves-light" id="preview-back">Back</a>
-        </div>
+        <!--<div class="col s12 m7 l5">
+            <a href="/addrecipe" onclick="history.go(-1)" class="btn waves-effect waves-light" id="preview-back">Back</a>
+        </div>-->
     </div>
 </div>
 
