--- a/templates/builder.html
+++ b/templates/builder.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <div class="row">
-        <h5>Recipe Builder</h5>
-    </div>
-    <form method="POST" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data" id="builder-form">
         <div class="card-panel">
+            <!-- header -->
+            <div class="row form-header">
+                <h5>My Recipe Builder</h5>
+            </div>
             <!-- preview -->
             <div class="row">
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light cyan" type="submit" id="preview-builder" name="preview"
-                        formaction="/preview" target="_blank">Preview Card</button>
+                        formaction="/preview">Preview Recipe</button>
                 </div>
             </div>
             <!-------title------->
@@ -34,7 +35,7 @@
                 <div class="file-field input-field">
                     <div class="row">
                         <div class="col s12">
-                            <div class="btn">
+                            <div class="btn pink darken-4">
                                 <span>Select Image</span>
                                 <input type="file">
                             </div>
@@ -75,39 +76,39 @@
                 </div>
             </div>
             <!-------ingredients------->
-            <div class="row">
+            <div class="row teal lighten-5 builder-extra-row">
                 <div class="col s12">
                     <label>Ingredients</label>
                     <br>
                     <div class="container ingredients">
                     </div>
                     <br>
-                    <a class="btn waves-effect waves-light" id="builder-add-ingredient">Add Ingredient</a>
+                    <a class="btn waves-effect waves-light" id="builder-add-ingredient">+ Ingredient</a>
                 </div>
             </div>
             <br>
             <!-------method------->
-            <div class="row">
+            <div class="row cyan lighten-5 builder-extra-row">
                 <div class="col s12">
                     <label>Method</label>
                     <br>
                     <div class="container steps">
                     </div>
                     <br>
-                    <a class="btn waves-effect waves-light" id="builder-add-step">Add Step</a>
+                    <a class="btn waves-effect waves-light" id="builder-add-step">+ Step</a>
                 </div>
             </div>
             <!-------submit------->
             <div class="row">
                 <!-------submit btn------->
-                <div class="col s3 offset-s3">    
+                <div class="col s12 m3 offset-m3">    
                     <div class="input-field col s12 center">
                         <button class="btn waves-effect waves-light orange" type="submit" id="submit-builder"
                             name="submit" formaction="/addrecipe">Submit</button>
                     </div>
                 </div>
                 <!-------reset btn------->
-                <div class="col s3">
+                <div class="col s12 m3">
                     <div class="input-field col s12 center">
                         <button class="btn waves-effect waves-light red" type="reset" id="reset-builder"
                             name="reset">Reset</button>
