--- a/templates/home.html
+++ b/templates/home.html
@@ -72,6 +72,20 @@
                     </div>
                 </div>
             </div>
+            <section>
+                <!-- flash messages -->
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="row">
+                                <div class="flashes">
+                                    <h5 class="white-text center-align">{{ message }}</h5>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+            </section>
         </div>
     </div>
 
